# document-manager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
client/doc-manager/: package-lock.json
docs/: HLD.md
requirements/: base.in  dev.in
src/propylon_document_manager/accounts/: managers.py  models.py
src/propylon_document_manager/accounts/migrations/: 0001_initial.py
src/propylon_document_manager/file_versions/: models.py  urls.py  utils.py
src/propylon_document_manager/file_versions/api/: serializers.py  views.py
src/propylon_document_manager/file_versions/management/commands/: load_file_fixtures.py
src/propylon_document_manager/file_versions/migrations/: 0002_delete_user.py  0003_file_document.py  0004_document_created_at_document_file_location_and_more.py  0005_alter_document_file_location_alter_file_digest.py  0006_alter_document_file_location.py  0007_alter_file_digest.py
src/propylon_document_manager/site/: api_router.py  urls.py
src/propylon_document_manager/site/settings/: base.py  local.py  production.py
tests/: conftest.py  test_file_versions.py
tests/file_versions/: test_utils.py
tests/file_versions/api/: test_views.py
