# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=tests.settings --reuse-db"
pythonpath = [
    ".",
    "src"
]
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["propylon_document_manager/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
# [tool.black]
# line-length = 119
# target-version = ['py311']


# ==== isort ====
# [tool.isort]
# profile = "black"
# line_length = 119
# known_first_party = [
#     "propylon_document_manager",
#     "config",
# ]
# skip = ["venv/"]
# skip_glob = ["**/migrations/*.py"]


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]

[tool.ruff]
exclude = [".venv", "client"]
src = ["propylon_document_manager"]

[tool.poetry]
name = "document-manager-assessment"
version = "0.1.0"
description = ""
authors = ["Zeeshan Asgar <asgarzeeshan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
django-allauth = "^0.63.1"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
factory-boy = "^3.3.0"
Faker = "^25.2.0"
flake8 = "^7.0.0"
ruff = "^0.4.4"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"
django-coverage-plugin = "^3.1.0"
whitenoise = "^6.6.0"
pillow = "^10.3.0"
argon2-cffi = "^23.1.0"
python-slugify = "^8.0.4"
pytest-django = "^4.8.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
mypy = "^1.10.0"
coverage = "^7.5.1"
django-environ = "^0.11.2"
django-model-utils = "^4.5.1"
drf-spectacular = "^0.27.2"
django-stubs = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
